--- a/src/index.html
+++ b/src/index.html
@@ -14,13 +14,12 @@
   </head>
   <body>
     <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
+      <h1 class="mt-5">Proyecto Generador de Dominios</h1>
+         <p class="alert alert-warning mt-4">
+        "Metodo map"
       </p>
-      <div class="fixed-bottom p-4">
+      <ul id="for-map"></ul>
+      <div class="fixed-bottom p-4 d-none">
         Made with ❤️ by
         <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
       </div>
